--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,14 +6,46 @@
     --color-de-links-active: lightsalmon;
     --color-de-links-hover:red;
     --color-de-links-visited:grey;
+    --tituloh3: rgba(216, 119, 1,0.85);
+    --tituloh2: rgba(0, 128, 128,0.85);
+    --tituloh1: rgba(216, 119, 1,1);
     /* color: ; */
+}
+
+.nav{
+    position:fixed;
+    top:0;
+    left: 0;
+    right:0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+.nav li {
+    float: left;
+}
+
+.nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+}
+
+.nav li a:hover {
+    background-color: #111111;
+    background-color: #0F81E0;
 }
 
 .fijo{
     background-color: hsl(60, 75%, 50%);
     color: black;
     position: fixed;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
     right: 0px;
 }
@@ -62,7 +94,7 @@ html, body{
 }
 
 body{
-    background-color: rgba(20, 20, 92, 0.95);
+    background-color: rgba(14, 14, 77, 0.95);
     /* background-size: 50%; */
     /* background-repeat: no-repeat; */
     /* background-attachment: fixed; */
@@ -70,10 +102,10 @@ body{
 }
 
 main{
-    width: 85%;
+    width: 95%;
     max-width: 900px;
     text-align: left;
-    margin: 80px auto;
+    margin: 100px auto 50px;
 }
 
 
@@ -100,7 +132,7 @@ li{
 }
 
 h1 {
-    background-color: #d87701;
+    background-color: var(--tituloh1);
     box-shadow: -5px 10px rgba(255, 218, 173,0.25);
     text-align: center;
     
@@ -119,7 +151,7 @@ h2{
     color:white;
     text-indent: 10px;
     /*text-shadow: -2px 2px lightgrey;*/
-    background-color: #008080;
+    background-color: var(--tituloh2);
     border-left: 6px solid #647AA3;
     border-right: 2px solid #647AA3;
     border-top: 2px solid #647AA3;
@@ -137,7 +169,7 @@ h3{
     margin-left: 2%;
     text-indent: 10px;
     /*text-shadow: -2px 2px #ffdaad;*/
-    background-color: #d87701;
+    background-color: var(--tituloh3);
     border-left: 3px solid #647aa3;
     border-right: 1px solid #647aa3;
     border-top: 1px solid #647aa3;
@@ -223,6 +255,7 @@ blockquote{
     font-weight: lighter;
     font-size: smaller;
     text-align: center;
+    margin-bottom: 100px;
 }
 
 footer{
