--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,17 @@
     --tituloh1: rgba(216, 119, 1,1);
     /* color: ; */
 }
+@media (max-width: 400px) {
+    body{
+        font-size: 70%;
+    }
+}
+
+@media (max-width: 700px) {
+    body{
+        font-size: 90%;
+    }
+}
 
 .nav{
     position:fixed;
@@ -287,4 +298,4 @@ footer{
   
   [transition-style="in:circle:hesitate"] {
     animation: 2.5s cubic-bezier(.25, 1, .30, 1) circle-in-hesitate both;
-  }
+}
