--- a/style.css
+++ b/style.css
@@ -1,234 +1,308 @@
-:root{
-    --color-background: #EEF1E6;
-    --color-nav-a: #F9665E;
-    --color-de-letra: #444444;
-    --color-de-fix: #AFC7D0;
-    --color-de-links: grey;
-    --color-de-links-active: grey;
-    --color-de-links-hover: #F6A8A6;
-    --color-de-links-visited: lightsalmon;
-    --tituloh3-letra: #F9665E;
-    --tituloh3: #F4CDA6;
-    --tituloh2: #F9665E;
-    --tituloh1: #799FCB;
-}
-
-body{
-    top: 0;
-    left: 0;
+*{
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/* font-family: 'Anonymous Pro', monospace;
+font-family: 'Montserrat', sans-serif; */
+
+body{
+    background-color: #DDD;
+    font-family: 'Montserrat', sans-serif;
+    display: grid;
+    grid-template-columns: 15vw auto;
+    grid-template-rows:auto auto auto auto;
+    grid-template-areas:"header header"
+                        "nav nav"
+                        "main main"
+                        "footer footer";
     
 }
 
-* {
-    box-sizing: border-box;
-}
-
-@media only screen and (min-width:801px) {
-    header{
-        padding-top: 12vh;
-    }
-    #fix{
-        bottom:0;
-    }
-}
-
-@media only screen and (max-width:800px) {
-    /* For tablets: */
-    nav li{
-      /* width: 50%; */
-      padding: 0;
-      line-height: 0.1rem;
-    }
-    #header{
-        padding-top:10vh;
-    }
-    #fix{
-        bottom:0;
-    }
-}
-
-@media only screen and (max-width:500px) {
-    /* For mobile phones: */
-    #menu {
-        /* display: none;
-        visibility: hidden;
-        clear: both; */
-        float: left;
-        margin: 10px auto 5px 20px;
-        /* width: 28%; */
-        /* display: none; */
-    }
-    nav li{
-        /* width: 100%; */
-        line-height: -0.2rem;
-    }
-    /* #fix{
-        top:0;
-        height: 7vh;
-    } */
-}
 
 header{
-    /* background-color:hsl(207, 87%, 27%); */
-    width: 95vw;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: white;
+    grid-area: header;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 50px 20px 30px;
+    font-family: 'Montserrat', sans-serif;
 }
 
-#header{
-    text-align: center;
-    line-height: 0rem;
+header img{
+    box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
 }
 
-#menu{
-    position: fixed;
-    top:0;
-    left: 0;
-    right:0;
-    margin: 0;
-    background-color: #555555;
+header h1{
+    font-family: 'Anonymous Pro',monospace;
+    color: #2B58E0;
+    font-weight: 400;
+    font-size: 2.5rem;
+    margin-left: 1rem;
+    text-shadow: #122661;
+    letter-spacing: .15em;
+    text-shadow: 2px 3px 5px hsl(0, 0%, 75%);
+    
 }
 
-nav ul{
-    padding:0;
-}
-
-nav li{
-    display: inline-block;
-}
-
-nav ul li{
-    float:left;
-    list-style-type: none;
+header a{
+    color: white;
     text-decoration: none;
-    padding: 2vh 2vw 2vh 2vw; 
-}
-nav li a:visited, nav li a:active, nav li a:link{
-    display: inline;
-    color: #FFFFFF;
-    text-decoration: none;    
+
 }
 
-nav li:hover {
-    background-color: var(--color-nav-a);
+#left{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#right{
+    background-color: #2B58E0;
+    border: 1px solid #2B58E0;
+    padding: 0.8rem 1.2rem;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap:15px;
+}
+
+#right span{
+    color:#eee
+}
+
+nav{
+    background-color: #708EE6;
+    grid-area: nav;
+    padding-left: 50px;
+}
+
+nav section{
+    width: 80%;
+    max-width: 1000px;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap:15px;
+}
+
+#seleccionado{
+    color: white;
+    text-decoration: none;
+    background-color: #2B58E0;
+    border: 1px solid #2B58E0;
+    padding: 0.8rem 1.4rem;
+    border-radius: 0.5rem;
+    margin:5px 0;
+}
+
+#seleccionado:hover{
+    border: 1px solid #eeeeee;
+}
+
+.no-seleccionado{
+    color: white;
+    text-decoration: none;
+    background-color: #708EE6;
+    border: 1px solid #708EE6;
+    padding: 0.8rem 1.4rem;
+    border-radius: 0.5rem;
+    margin:5px 0;
+}
+
+.no-seleccionado:hover{
+    color: #2B58E0;
+    text-decoration: none;
+    background-color: #eee;
+    border: 1px solid #708EE6;
+    padding: 0.8rem 1.4rem;
+    border-radius: 0.5rem;
+    margin:5px 0;
+}
+
+nav section a{
+    color:white;
+    text-decoration: none;
+    margin:5px 0;
+    margin-left: 10px;
 }
 
 main{
-    width: 95vw;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
+    background-color: white;
+    margin: 15px auto;
+    min-height: 60vh;
+    padding: 20px;
+    width: 90%;
+    grid-area: main;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 20px;
+    border-radius: .5rem;
+    box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
 }
 
-h1{
-    background-color: var(--tituloh1);
-    color: white;
-    text-align: center;
-    padding: 0.3em;
-    box-shadow: -5px 10px rgba(255, 218, 173,0.25);
-    border-bottom:4px solid #647AA3;
-    border-left:6px solid #647AA3;
-    border-right: 2px solid #647AA3;
-    border-top: 2px solid #647aa3;
-    margin-bottom: -1.5rem;
-}
+.titulos{
+    padding:15px 0;
+    margin:15px 0;
+    text-align: right;
+    font-size: 0.9rem;
+    min-width: 220px;
 
-h2{
-    margin-top: 35px;
-    color:white;
-    text-indent: 10px;
-    /*text-shadow: -2px 2px lightgrey;*/
-    background-color: var(--tituloh2);
-    border-left: 6px solid #647AA3;
-    border-right: 2px solid #647AA3;
-    border-top: 2px solid #647AA3;
-    
-    border-bottom: 6px solid #647AA3;
-    box-shadow: -5px 10px rgba(144, 213, 209,0.25);
-    text-align:center;
-    padding: 0.3em;
-    
-}
-
-h3{
-    color: var(--tituloh3-letra);
-    margin-left: 2%;
-    border-bottom: 2px solid #957DAD;
-    margin-top:28px;
-    padding: 0.3em;
-}
-
-a{
-    /* color: #647AA3; */
-    color:var(--color-de-links);
-    text-decoration: underline currentColor;
-    text-align:left;
-}
-
-a:active{
-    color: var(--color-de-links-active);
-}
-
-a:hover{
-    color: var(--color-de-links-hover);
-}
-
-a:visited{
-    color:var(--color-de-links-visited);
 }
 
 
-.background{
-    animation-name: circle-in-hesitate;
-    animation-duration: 2s;
-    position:fixed;
-    z-index: -1;
-    top:0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: auto;
-    /*   */
-    background: linear-gradient(to bottom, hsl(76, 28%, 92%) 98%, hsl(76, 0%, 62%));
+.contenidos{
+    border-left: 2px solid rgba(43, 88, 224,0.15);
+    text-align: justify;
+    padding: 35px 50px;
+
 }
 
 footer{
-    background-color:var(--color-nav-a);
-    color:white;
-    text-align:center;
-    padding:10px 0 7vh 0;
-    margin-top:7px;
-    font-size:12px;
-}
-
-#fix{
-    position: fixed;
-    left:0;
-    right:0;
-    background: /* linear-gradient(#F9665E,#F4CDA6) */var(--color-de-fix);
-    color:#555555;
-    border: 1px solid #555555;
-    font-size: small;
-    text-align: center;
-    padding: 1vh;
-    text-shadow:#555555;
-}
-
-li{
-    text-align:left;
-    color:var(--color-de-letra);
+    grid-area: footer;
 }
 
 p{
-    color:var(--color-de-letra);
+    line-height: 25px;
 }
 
-.lista{
-    color: #799FCB;
+p::first-line{
+    text-indent: 20px;
+}
+
+ul{
+    margin: 1rem 2.5rem;
+    line-height: 25px;
+    text-align: left;
+}
+
+footer{
+    background-color: #122661;
+    color:#ddd;
+    font-size: small;
+    font-weight: thin;
+    text-decoration: none;
+    padding: 15px;
+    text-align: center;
+}
+
+p>a{
     text-decoration: underline;
+    text-decoration-color: white;
+    font-weight: bolder;
+    color:rgb(162, 210, 250)
+}
+
+@media screen and (max-width:768px) {
+    body{
+        grid-row-gap:0px;
+    }
+
+    header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap:10px;
+        margin: 8px 10px 0px;
+        padding: 20px;
+        border-radius: 1rem;
+        box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
+    }
+
+    #right{
+        align-items: flex-end;
+        align-content: flex-start;
+        padding-top: 0px;
+    }
+    
+    header a{
+        margin: 15px 5px 0px;
+        width: 100%;
+    }
+
+    nav{
+        box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
+        padding-left: 10px;
+        width: 92%;
+        margin: 15px auto;
+        border-radius: .5rem;
+        box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
+    }
+
+    nav section{
+        width: 75%;
+        max-width: 1000px;
+        margin: 0px auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex;
+        text-align: center;
+        padding:10px 0;
+        gap:0px;
+    }
+
+    nav section a{
+        margin: 8px 10px;
+    }
+
+    main{
+        flex-direction: column;
+        gap: 0px;
+        margin: 0px auto 10px;
+        width: 88%;
+    }
+    
+    .titulos{
+        text-align: left;
+    }
+    
+    .contenidos{
+        border-top: 1px solid rgba(43, 88, 224,0.15);
+        border-left:none;
+        padding:10px 15px;
+        text-align: justify;
+    }
+
+    #seleccionado{
+        color: white;
+        text-decoration: none;
+        background-color: #2B58E0;
+        border: 1px solid #2B58E0;
+        padding: 0.4rem 0.8rem;
+        border-radius: 0.5rem;
+        margin:0px 0;
+    }
+    
+    #seleccionado:hover{
+        border: 1px solid #eeeeee;
+    }
+    
+    .no-seleccionado{
+        color: white;
+        text-decoration: none;
+        background-color: #708EE6;
+        border: 1px solid #708EE6;
+        padding: 0.4rem 0.8rem;
+        border-radius: 0.5rem;
+        margin:0px 0;
+    }
+    
+    .no-seleccionado:hover{
+        color: #2B58E0;
+        text-decoration: none;
+        background-color: #eee;
+        border: 1px solid #708EE6;
+        padding: 0.4rem 0.8rem;
+        border-radius: 0.5rem;
+        margin:0px 0;
+    }
+    
+
 }
