--- a/style.css
+++ b/style.css
@@ -46,11 +46,23 @@ header h1{
     
 }
 
-header a{
-    color: white;
+body > header > div > a > button{
+    display: flex;
+    color: #eee;
     text-decoration: none;
-
+    background-color: #2B58E0;
+    border-radius: 0.5rem;
+    vertical-align: middle;
+    justify-content: space-between;
+    column-gap:10px;
+    align-items: center;
+    padding: 0.8rem 1.2rem;
 }
+body > header > div > a{
+    text-decoration: none;
+    display: block;
+}
+
 
 #left{
     display: flex;
@@ -59,21 +71,6 @@ header a{
     align-items: center;
 }
 
-#right{
-    background-color: #2B58E0;
-    border: 1px solid #2B58E0;
-    padding: 0.8rem 1.2rem;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap:15px;
-}
-
-#right span{
-    color:#eee
-}
 
 nav{
     background-color: #708EE6;
@@ -237,18 +234,13 @@ p{
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         text-align: center;
         gap:10px;
         margin: 8px 10px 0px;
         padding: 20px;
         border-radius: 1rem;
         box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
-    }
-
-    #right{
-        align-items: flex-end;
-        align-content: flex-start;
-        padding-top: 0px;
     }
     
     header a{
