--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header{
 
 header img{
     box-shadow: 2px 3px 5px hsl(0, 0%, 75%);
+    background: linear-gradient(rgba(255, 230, 0,0.2),rgba(255, 0, 0, 0.8));
 }
 
 header h1{
