--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 :root{
     --roboto:'Roboto', sans-serif;
     --encode:'Encode Sans SC', sans-serif;
+    --whitening:#fefefe;
     --light-blue-i: #08B9E1;
     --header:#08B9E1;
     --header-color:#fafafa;
