--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,18 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Encode Sans SC', sans-serif;
     box-sizing: border-box;
 }
 
 :root{
-    --roboto:'Roboto', sans-serif;
     --encode:'Encode Sans SC', sans-serif;
-    --whitening:#fefefe;
-    --light-blue-i: #08B9E1;
     --header:#08B9E1;
     --header-color:#fafafa;
-    --border-image:#9AC1E9;
-    --light-blue-ii: #6EBAF3;
-    --light-blue-iii: #95C1D7;
-    --light-blue-iv: #9AC1E9;
-    --pink-i: #F884F7;
-    --grey-i:#fafafa;
-    --violet-i:#5563BC;
     --header-button:#5563BC;
     --header-button-hover:#4a56a3;
     --section-background: #45567D;
+    --project-hover:#343f58;
     --section-color:#F0F0F0;
 }
 
@@ -34,6 +25,7 @@ html{scroll-behavior: smooth;}
     color:var(--header-color);
     width: 100%;
     border-bottom: 1px solid #fff3;
+    z-index:1;
 }
 
 #header-max{
@@ -126,7 +118,7 @@ a.active,a.nav-link:hover{
 #header-contact:focus
 #header-bars:checked{
     background-color: #45567D;
-    color:#f0f0f0
+    color:var(--section-color);
 }
 
 .backgrounds{
@@ -134,11 +126,20 @@ a.active,a.nav-link:hover{
     padding-bottom: 10vh;
     width: 100%;
     min-height: 100vh;
+    text-align: center;
 }
 
 .max{
+    display:flex;
+    flex-direction: column;
     width:80%;
     max-width: 800px;
+    margin:0 auto;
+}
+
+.project-max{
+    width:80%;
+    max-width: 1200px;
     margin:0 auto;
 }
 
@@ -151,11 +152,13 @@ a.active,a.nav-link:hover{
 }
 
 .backgrounds:nth-child(2n){
-    background-color: #fafafa;
+    background-color: var(--header-color);
+    color:#333;
 }
 
 .backgrounds:nth-child(2){
     background-color: #56B;
+    color:var(--section-color);
 }
 
 .backgrounds:nth-child(4){
@@ -169,20 +172,110 @@ a.active,a.nav-link:hover{
 .special-bold{
     font-family: inherit;
     font-weight: bold;
-    color: #08B9E1;
+    color: var(--header);
 }
 
 
 
-#Sobre_mí .max img{
+#welcome-section .max img{
     padding-bottom:1.5rem
 }
 
-#Sobre_mí .max p{
+#welcome-section .max p,
+#welcome-section .max h1{
+    font-weight: 400;
     font-size: 1.2rem;
     text-align: center;
+    margin:0 auto;
     margin-bottom:.3em;
     font-family: var(--encode);
+}
+
+.section-header{
+    padding-bottom: .5rem;
+    font-size:1.8rem;
+    border-bottom: 2px solid var(--section-color);
+    margin-bottom:2rem;
+}
+
+.section-grid{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
+    grid-auto-rows:1fr;
+    gap:1rem;
+}
+
+.project-tile:hover,
+.project-tile:hover p{
+    background-color: var(--section-color);
+    color:var(--section-background);
+    font-weight: bold;
+}
+.project-tile:hover span{
+    color:var(--header);
+    font-weight: bold;
+}
+
+.project-tile{
+    position:relative;
+    color:inherit;
+    text-decoration: none;
+    background-color: var(--project-hover);
+    border-radius: .5rem;
+    overflow: hidden;
+}
+
+.project-tile img{
+    border-top-right-radius:.5rem;
+    border-top-left-radius:.5rem;
+    max-width: 100%;
+    object-fit: cover;
+}
+
+.project-tile p{
+    position: absolute;
+    background-color: var(--project-hover);
+    width: 100%;
+    bottom:0;
+    color:#d0d0d0;
+    text-transform: uppercase;
+    font-weight:500;
+    padding:.6rem
+}
+
+.project-tile span{
+    color:orangered;
+    margin:.2rem;
+}
+
+#social-media{
+    padding:20vh 1rem;
+    color:var(--header-button)
+}
+
+.section-media{
+    padding:5vh 5vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.section-media a{
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding:1rem;
+    text-decoration: none;
+    color:inherit;
+    display: grid;
+    gap:.4rem;
+}
+
+.section-media a:hover{
+    color:orangered
+}
+
+.section-media a i{
+    font-size: 2rem;
 }
 
 #footer{
@@ -211,6 +304,7 @@ a.active,a.nav-link:hover{
     color:#eee;
     text-decoration: underline;
 }
+
 
 
 
