--- a/css/style.css
+++ b/css/style.css
@@ -1,259 +1,129 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Encode Sans SC', sans-serif;
-    box-sizing: border-box;
-}
-
 :root{
-    --encode:'Encode Sans SC', sans-serif;
-    --header:#08B9E1;
-    --header-color:#fafafa;
-    --header-button:#5563BC;
-    --header-button-hover:#4a56a3;
-    --section-background: #45567D;
-    --project-hover:#343f58;
-    --section-color:#F0F0F0;
+    --color-principal: #840db3;
+    --color-principal: #2868b1;
 }
 
-html{scroll-behavior: smooth;}
-
-#header{
-    position:sticky;
+#header-container{
+    position: sticky;
     top:0;
-    background-color: var(--header);
-    color:var(--header-color);
-    width: 100%;
-    border-bottom: 1px solid #fff3;
-    z-index:1;
+    background-color: white;
+    border-top:1px solid #dfdfdf;
+    z-index: 10;
+    -webkit-box-shadow: 0px 0px 50px 13px rgba(210,210,210,0.33); 
+    box-shadow: 0px 0px 50px 13px rgba(210, 210, 210, 0.33);
 }
 
-#header-max{
-    margin: 0 auto;
-    padding:.5rem 0;
-    width:90%;
-    max-width: 1200px;
-    display: grid;
-    grid-template-columns: 1fr auto auto;
-    text-transform: uppercase;
+.py-3.mb-4{
+    padding: .7rem 0 !important;
+    margin-bottom: 0 !important;
 }
 
-#header-logo{
-    text-shadow: 0 0 5px rgba(0,0,0,0.15);
-    text-decoration: none;
-    color:inherit;
-    display:grid;
-    grid-template-columns: auto 1fr;
-    align-items: center;
-    gap:1rem;
-}
-
-#logo-image{
-    width: 60px;
-    height: 60px;
-    border: 2px solid #FFF;
-    background: linear-gradient(120deg, #eee,#eee8);
-    border-radius: 100%;
+a.mb-3{
+    margin-bottom: 0 !important;
 }
 
 #logo{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    -webkit-box-shadow: inset 0px 0px 50px 13px rgba(180,180,180,0.33); 
+    box-shadow: inset 0px 0px 50px 13px rgba(180,180,180,0.3);
+    max-width: 60px;
+    border-radius: 100%;
+    border: 1px solid #333
+}
+
+.centrado{
+    padding: 2vh 0 6vh;    /* max-height: 70vh; */
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap:1rem
+}
+
+.centrado>p.lead.fw-normal{
+    max-width: 50ch;
+    padding: 1rem 2.6rem 0;
+}
+
+.container header a{
+    gap: 1rem
+}
+
+.container header a span{
+    font-size: larger;
+    text-transform: uppercase;
+}
+
+.fas.fa-envelope.i-button{
+    font-size: 24px;
+}
+
+#main-img{
+    max-width: 100%;
+    max-height: 50vh;
     border-radius: 100%;
 }
 
-#title{
-    font-family: var(--encode);
-    font-size: 2rem;
-    font-weight: 500;
+.special{
+    font-weight: bold;
+    color: var(--color-principal)
 }
 
-#header-nav{
-    display:flex;
+.lead.fw-normal{
+    max-width: 60%;
 }
 
-#nav{
-    display: flex;
-    align-self: center;
-    list-style-type: none;
-    gap:.4em;
+.centrado2{
+    color:white;
 }
 
-#nav li a{
-    font-size: 0.9em;
-    text-decoration: none;
-    color:inherit;
-    padding:.2em .4em;
+#projects, #contact{
+    padding: 1.5rem;
+    /* background-color: #840db3;
+    background-color: #390050; */
+    
 }
 
-a.active,a.nav-link:hover{
-    text-shadow: 0 0 100px black;
+#projects{
+    background-color: #043a77;
 }
 
-#header-contact,
-#header-bars{
-    text-decoration: none;
-    color:inherit;
-    align-self: center;
-    background-color: var(--header-button);
-    border-radius: .2em;
-    margin-left: 1rem;
-}
-
-#header-bars,
-#menu{
-    display: none;
-}
-
-.i-button{
-    padding:.8rem 1rem;
-    font-size: 1.3rem;
-    display: flex;
-    gap:.5rem;
-    align-content:center;
-}
-
-#header-contact:hover,
-#header-contact:focus
-#header-bars:checked{
-    background-color: #45567D;
-    color:var(--section-color);
-}
-
-.backgrounds{
-    padding-top: 10vh;
-    padding-bottom: 10vh;
-    width: 100%;
-    min-height: 100vh;
+h2{
+    padding:1rem 0 0;
     text-align: center;
+    text-transform: uppercase;
 }
 
-.max{
-    display:flex;
-    flex-direction: column;
-    width:80%;
-    max-width: 800px;
-    margin:0 auto;
+#projects h2{
+    color: #fff;
 }
 
-.project-max{
-    width:80%;
-    max-width: 1200px;
-    margin:0 auto;
-}
-
-#first-image{
-    display: block;
-    max-width: 100%;
-    max-height: 70vh;
-    border-radius: 80%;
-    margin:0 auto;
-}
-
-.backgrounds:nth-child(2n){
-    background-color: var(--header-color);
-    color:#333;
-}
-
-.backgrounds:nth-child(2){
-    background-color: #56B;
-    color:var(--section-color);
-}
-
-.backgrounds:nth-child(4){
-    background-color: #5b6;
-}
-
-.backgrounds:nth-child(6){
-    background-color: #b65;
-}
-
-.special-bold{
-    font-family: inherit;
-    font-weight: bold;
-    color: var(--header);
-}
-
-
-
-#welcome-section .max img{
-    padding-bottom:1.5rem
-}
-
-#welcome-section .max p,
-#welcome-section .max h1{
-    font-weight: 400;
-    font-size: 1.2rem;
-    text-align: center;
-    margin:0 auto;
-    margin-bottom:.3em;
-    font-family: var(--encode);
-}
-
-.section-header{
-    padding-bottom: .5rem;
-    font-size:1.8rem;
-    border-bottom: 2px solid var(--section-color);
-    margin-bottom:2rem;
-}
-
-.section-grid{
-    display:grid;
-    grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
-    grid-auto-rows:1fr;
-    gap:1rem;
-}
-
-.project-tile:hover,
-.project-tile:hover p{
-    background-color: var(--section-color);
-    color:var(--section-background);
-    font-weight: bold;
-}
-.project-tile:hover span{
-    color:var(--header);
-    font-weight: bold;
-}
-
-.project-tile{
-    position:relative;
-    color:inherit;
+.card a{
     text-decoration: none;
-    background-color: var(--project-hover);
-    border-radius: .5rem;
-    overflow: hidden;
 }
 
-.project-tile img{
-    border-top-right-radius:.5rem;
-    border-top-left-radius:.5rem;
-    max-width: 100%;
+.card a img{
     object-fit: cover;
 }
 
-.project-tile p{
-    position: absolute;
-    background-color: var(--project-hover);
-    width: 100%;
-    bottom:0;
-    color:#d0d0d0;
+.card-body{
+    padding:.25rem;
+}
+
+.card-body h5{
+    padding:.4rem 0 0;
     text-transform: uppercase;
-    font-weight:500;
-    padding:.6rem
+    text-decoration: none;
+    color:#333;
+    font-size: .95rem;
 }
 
-.project-tile span{
-    color:orangered;
-    margin:.2rem;
-}
-
-#social-media{
-    padding:20vh 1rem;
-    color:var(--header-button)
+.card-img, .card-img-bottom, .card-img-top {
+    height: 200px;
 }
 
 .section-media{
+    text-align: center;
     padding:5vh 5vw;
     display: flex;
     flex-wrap: wrap;
@@ -261,7 +131,7 @@ a.active,a.nav-link:hover{
 }
 
 .section-media a{
-    font-size: 1rem;
+    font-size: .85rem !important;
     text-transform: uppercase;
     padding:1rem;
     text-decoration: none;
@@ -271,106 +141,62 @@ a.active,a.nav-link:hover{
 }
 
 .section-media a:hover{
-    color:orangered
+    color: var(--color-principal)
 }
 
 .section-media a i{
-    font-size: 2rem;
+    font-size: 1.2rem !important;
 }
 
-#footer{
-    background-color: #444;
-    color:#bbb;
-    text-align: center;
-    display:flex;
-    flex-direction: column;
-    gap:1rem;
-    padding:.5rem 1rem 1rem;
+.container>footer.py-3{
+    padding-bottom: 0rem !important;
 }
 
-#footer p a{
-    color:#999;
-    text-decoration: none;
+.container>footer.my-4{
+    margin-bottom: .5rem !important;
 }
 
-#footer p:last-child{
-    color:#ccc;
-    font-weight: 300;
-    font-size: 1.1rem;
-}
+/* MEDIA QUERIES */
 
-#footer p:last-child a:last-child{
-    font-weight: bolder;
-    color:#eee;
-    text-decoration: underline;
-}
-
-
-
-
-@media screen and (max-width:700px) {
-    #header{
-        padding: 0;
-        background: transparent;
-        border-bottom:none;
+@media (max-width:480px) {
+    *{
+        font-size: 1rem !important;
     }
 
-    #header-max{
-        width: 100%;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: auto auto;
-        padding: 0;
+    .nav.nav-pills{
+        display:none
     }
 
-    #header-logo, #header-bars{
-        background-color: #45567D;
-        padding: 0;
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-        align-items: center;
-    }
+    #logo{
+        max-width: 45px;
+    } 
 
-    #header-bars i{
-        font-size: 1.5rem;
-        padding:0 1.3rem;
+    .card-body h5{
+        font-size:.85rem !important;
     }
-
-    #header-nav{
-        visibility: hidden;
-        background-color: #374157;
-        padding:.6rem;
-        grid-row: 2;
-        grid-column: 1/-1;
-        justify-content: center;
-    }
-
-    #menu:checked ~ #header-bars{
-        background-color: #08B9E1;
-    }
-
-    #menu:checked ~ #header-nav{
-        visibility: visible;
-    }
-
-    #logo-image{
-        margin: .5rem 0 .5rem 1rem;
-    }
-
-    #header-bars{
-        display: flex;
-    }
-
-    #header-contact{
-        display:none;
-        
-    }
-
-    #title{
-        text-align: center;
-    }
-
     
+    h2{
+        font-size: 1.25rem !important;
+    }
 
+    footer{
+        flex-direction: column !important;
+    }
+    
 }
+
+/* @media (min-width:1200px) {
+    .{}
+} */
+
+/* @media (min-width:992px) {
+    .{}
+} */
+
+/* @media (min-width:768px) {
+    .{}
+} */
+
+/* @media (min-width:320px) {
+    .{}
+} */
