--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     --color-principal: #2868b1;
 }
 
+#header{
+    align-items:center;
+}
+
 #header-container{
     position: sticky;
     top:0;
